@@ -1,3 +1,6 @@
+    New feature: Ability to override which email addresses to notify
+    on a followup.
+    
 - 0.11.0
 
     Bug fixed: Saved filters that refer to objects that no longer
